# VRChatUtility_FriendListMonitor

./: .gitignore  LICENSE  readme.md
AWS_CloudFormation/: .gitignore  pyproject.toml
AWS_CloudFormation/src/: deploy_dev_base_sample.sh  template_base.yaml
AWS_Lambda/BuildPipeline_Invoker/: .gitignore  pyproject.toml
AWS_Lambda/BuildPipeline_Invoker/src/: lambda_function.py
AWS_Lambda/BuildPipeline_Invoker/tests/: test_lambda_function.py
AWS_Lambda/FriendListMonitor_Dispatcher/: .gitignore  buildspec.yml  cloudformation.yml  pyproject.toml
AWS_Lambda/FriendListMonitor_Dispatcher/src/: common  lambda_function.py
AWS_Lambda/FriendListMonitor_Dispatcher/tests/: test_lambda_function.py
AWS_Lambda/FriendListMonitor_Worker/: .gitignore  buildspec.yml  cloudformation.yml  pyproject.toml
AWS_Lambda/FriendListMonitor_Worker/src/: dataobject.py  lambda_function.py
AWS_Lambda/FriendListMonitor_Worker/tests/: test_lambda_function.py
AWS_Lambda/FriendListProcesser/: .gitignore  buildspec.yml  cloudformation.yml  pyproject.toml
AWS_Lambda/FriendListProcesser/src/: lambda_function.py
AWS_Lambda/FriendListProcesser/tests/: test_lambda_function.py
Desktop/Admin/: .gitignore  build.sh  pyproject.toml
Desktop/Admin/src/: __main__.py  core.py
Desktop/Admin/tests/: test_main.py
Desktop/EventExtractor/: .gitignore  pyproject.toml
Desktop/EventExtractor/src/: main.py
Desktop/EventExtractor/tests/: test_app.py  test_main.py
Desktop/EventExtractor/tests/data/checkpoint/: sample.json
Desktop/EventExtractor/tests/data/config/: setting_sample.ini
Desktop/EventExtractor/tests/data/log/: output_log_sample02.txt  output_log_sample03.txt
Desktop/EventExtractor/tests/data/log_err/: output_log_err01.txt
Share/Common/: .env.sample  pyproject.toml
Share/Common/src/: dynamodb.py  entity.py  sqs.py  vrchat.py
share/: dataobject.py  sample.env
(+4 files in other folders)
