[tool.poetry]
name = "vrcutility_infra"
version = "0.1.0"
description = ""
authors = ["namoshika <namoshika@users.noreply.github.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
cfn-lint = "^0.61.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
