[tool.poetry]
name = "vrcutility_buildpipeline_invoker"
version = "0.1.0"
description = ""
authors = ["namoshika <namoshika@users.noreply.github.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
boto3 = "^1.24.55"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
pytest-mock = "^3.8.2"
autopep8 = "^1.7.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
