[tool.poetry]
name = "vrcutility_friendlistprocesser"
version = "0.1.0"
description = ""
authors = ["namoshika <namoshika@users.noreply.github.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
boto3 = "^1.24.46"
notion-client = "^1.0.1"

[tool.poetry.dev-dependencies]
autopep8 = "^1.6.0"
pytest = "^7.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
